Use the outermost SVG as base when computing offsetX/Y for SVG elements

This reverts the behavior back to what it was prior to
https://codereview.chromium.org/1747223002. In short, the closest
ancestor CSS layout box is used for any SVG element. This will always
be the outermost SVG root (LayoutSVGRoot.)

BUG=624996

Review-Url: https://codereview.chromium.org/2124283002
Cr-Commit-Position: refs/heads/master@{#404217}

Former-commit-id: bb725f3a42fd8caa33c542e46fe4d9fc7a72678f